# migration-project

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
db/init/: 01_init_db.sh  02_legacy_schema.sql  03_target_schema.sql
db/sql/: data_profiling.sql
docs/: data_quality_rules.md
notebooks/: data_exploration.ipynb
src/etl/: extract.py
src/models/: mapping.py  schemas.py
src/utils/: data_generator.py  database_connector.py  seed_legacy.py
